--- a/index.html
+++ b/index.html
@@ -736,12 +736,12 @@
         <!-- produtos -->
         <a href="#" class="produtos-container col-md-3">
           <!-- imagem do produto -->
-          <img src="./assets/images/aprendizagem_automatica.jpeg" class="img-fluid" alt="Aprendizagem Automática">
+          <img src="./assets/images/C_Sharp_completo.jpg" class="img-fluid" alt="C# Completo">
 
           <!-- itens do produto -->
           <article class="produtos-itens">
             <!-- title produto -->
-            <h2>Aprendizagem Automática</h2>
+            <h2>C# COMPLETO Programação Orientada a Objetos + Projetos</h2>
 
             <!-- stars -->
             <div class="produtos-stars">
@@ -780,14 +780,14 @@
         <!-- end produtos -->
 
         <!-- produtos -->
-        <a href="https://www.alura.com.br/curso-online-node-rest-api" class="produtos-container col-md-3">
+        <a href="https://www.udemy.com/course/java-curso-completo/" class="produtos-container col-md-3">
           <!-- imagem do produto -->
-          <img src="./assets/images/node-rest-api.svg" class="img-fluid" alt="Rest com NodeJS">
+          <img src="./assets/images/java_completo.jpg" class="img-fluid" alt="Rest com NodeJS">
 
           <!-- itens do produto -->
           <article class="produtos-itens">
             <!-- title produto -->
-            <h2>Rest com NodeJS: API com Express e MySQL</h2>
+            <h2>Java COMPLETO Programação Orientada a Objetos +Projetos</h2>
 
             <!-- stars -->
             <div class="produtos-stars">
@@ -828,12 +828,12 @@
         <!-- produtos -->
         <a href="#" class="produtos-container col-md-3">
           <!-- imagem do produto -->
-          <img src="./assets/images/php-primeiros-passos.svg" class="img-fluid" alt="Introdução ao PHP">
+          <img src="./assets/images/r_iniciantes.jpg" class="img-fluid" alt="Introdução ao PHP">
 
           <!-- itens do produto -->
           <article class="produtos-itens">
             <!-- title produto -->
-            <h2>Introdução ao PHP: Primeiros passos com a linguagem</h2>
+            <h2>Programação em R Studio - R para iniciantes</h2>
 
             <!-- stars -->
             <div class="produtos-stars">
@@ -868,12 +868,12 @@
         <!-- produtos -->
         <a href="#" class="produtos-container col-md-3">
           <!-- imagem do produto -->
-          <img src="./assets/images/fundamentos-javascript-tipos-variaveis-funcoes.svg" class="img-fluid" alt="Fundamentos do JavaScript">
+          <img src="./assets/images/c_basico_avancado.jpg" class="img-fluid" alt="Fundamentos do JavaScript">
 
           <!-- itens do produto -->
           <article class="produtos-itens">
             <!-- title produto -->
-            <h2>Fundamentos do JavaScript: Tipos, variáveis e funções</h2>
+            <h2>Programação em C do básico ao avançado</h2>
 
             <!-- stars -->
             <div class="produtos-stars">
